5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4194/executions/1644_2704.log
== TEST (2019-04-11 16:06:24) 
-- CODE:
nota = float(input("Qual sua nota?"))

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:15:54) 
-- CODE:
nota = float(input("Qual sua nota?"))
if(nota>=5):
	mensagem = "S"
var1 = nota + nota/100*10

else:
	mensagem = "N"

print(float())
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:16:11) 
-- CODE:
nota = float(input("Qual sua nota?"))
if(nota>=5):
	mensagem = "S"
var1 = nota + nota/100*10
else:
	mensagem = "N"

print(float())
-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:16:45) 
-- CODE:
nota = float(input("Qual sua nota?"))
if(nota>=5):
	mensagem = "S"
var1 = nota/100*10

else:
	mensagem = "N"

print(float())
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:16:55) 
-- CODE:
nota = float(input("Qual sua nota?"))
if(nota>=5):
	mensagem = "S"
	var1 = nota/100*10

else:
	mensagem = "N"

print(float())
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:18:42) 
-- CODE:
nota = float(input("Qual sua nota?"))
if(nota>=5):
	mensagem = "S"
	var1 = nota/100*10
	var2 = nota+var1
else:
	mensagem = "N"

print(float())
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:19:37) 
-- CODE:
nota = float(input("Qual sua nota?"))
if(nota>=5):
	mensagem = "S"
	var1 = nota/100*10
	var2 = nota+var1
else:
	mensagem = "N"

print(float())
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:19:59) 
-- CODE:
nota = float(input("Qual sua nota?"))
if(nota>=5):
	mensagem = "S"
	var1 = nota/100*10
	var2 = nota+var1
else:
	mensagem = "N"

print(mensagem)
-- OUTPUT:
S
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:21:02) 
-- CODE:
nota = float(input("Qual sua nota?"))
if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
	
var1 = nota/100*10
var2 = nota+var1

print(mensagem)
-- OUTPUT:
S
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:23:43) 
-- CODE:
nota = float(input("Qual sua nota?"))
if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
	
var1 = nota/100*10
var2 = nota+var1

print(float(var2))
-- EXECUTION TIME:
0.22725
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.840000000000001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:23:45) 
-- CODE:
nota = float(input("Qual sua nota?"))
if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
	
var1 = nota/100*10
var2 = nota+var1

print(float(var2))
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:24:12) 
-- CODE:
nota = float(input("Qual sua nota?"))
if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
	
var1 = nota/100*10
var2 = nota+var1

print(nota*0.1)
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:24:51) 
-- CODE:
nota = float(input("Qual sua nota?"))
if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
	
var1 = nota/100*10
var2 = nota+var1

print(var1)

-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:38:07) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = ("Vai receber bonificacao? (S/N)")

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
	
var1 = nota+nota/100*10


-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:38:21) 
-- CODE:
nota = float(input("Qual sua nota?"))
#bonificacao = ("Vai receber bonificacao? (S/N)")

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
	
var1 = nota+nota/100*10


-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:38:58) 
-- CODE:
nota = float(input("Qual sua nota?"))
#bonificacao = ("Vai receber bonificacao? (S/N)")

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
	
print(nota+nota/100*10)


-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:39:30) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = ("Vai receber bonificacao? (S/N)")

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
	
print(nota+nota/100*10)


-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:39:55) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = ("Vai receber bonificacao? (S/N)")

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
print(mensagem)
print(nota+nota/100*10)


-- OUTPUT:
S
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:39:59) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = ("Vai receber bonificacao? (S/N)")

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
print(mensagem)
print(nota+nota/100*10)


-- EXECUTION TIME:
0.197869
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
S
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
S
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
4.840000000000001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:40:09) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = ("Vai receber bonificacao? (S/N)")

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
print(mensagem)
print(nota+nota/100*10)


-- OUTPUT:
S
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:40:39) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = ("Vai receber bonificacao? (S/N)")

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
#print(mensagem)
print(nota+nota/100*10)


-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:40:50) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = ("Vai receber bonificacao? (S/N)")

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
print(mensagem)
print(nota+nota/100*10)


-- OUTPUT:
S
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:40:55) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = ("Vai receber bonificacao? (S/N)")

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
print(mensagem)
print(nota+nota/100*10)


-- OUTPUT:
S
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:41:21) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = ("Vai receber bonificacao? (S/N)")

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
print(mensagem)
print(nota+nota/100*10)


-- OUTPUT:
S
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:41:43) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)")

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
print(mensagem)
print(nota+nota/100*10)


-- OUTPUT:
S
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:41:57) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)")

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
print(mensagem)
print(nota+nota/100*10)


-- EXECUTION TIME:
0.195022
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
S
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
S
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
4.840000000000001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:41:59) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)")

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
print(mensagem)
print(nota+nota/100*10)


-- OUTPUT:
S
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:42:26) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)".upper())

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
print(mensagem)
print(nota+nota/100*10)


-- OUTPUT:
VAI RECEBER BONIFICACAO? (S/N)S
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:42:40) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)".upper())

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
print(mensagem)
print(nota+nota/100*10)


-- EXECUTION TIME:
0.136339
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
VAI RECEBER BONIFICACAO? (S/N)S
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
VAI RECEBER BONIFICACAO? (S/N)S
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
VAI RECEBER BONIFICACAO? (S/N)N
4.840000000000001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:42:58) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)").upper()

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
print(mensagem)
print(nota+nota/100*10)


-- OUTPUT:
S
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:43:44) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)").upper()

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
print(mensagem)
print(nota+nota/100*10)


-- OUTPUT:
S
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:43:56) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)").upper()

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
print(nota+nota/100*10)


-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:44:07) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)").upper()

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
print(nota+nota/100*10)


-- EXECUTION TIME:
0.207925
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.840000000000001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:45:13) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)").upper()

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
print(mensagem)
print(nota+nota/100*10)


-- OUTPUT:
S
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:45:56) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)").upper()

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
print(nota+nota/100*10)


-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:46:31) 
-- CODE:
nota = float(input("Qual sua nota?"))

if(nota>=5):
	mensagem = "S"
	bonificacao = input("Vai receber bonificacao? (S/N)").upper()

else:
	mensagem = "N"
print(nota+nota/100*10)


-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:47:04) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)")

if(nota>=5):
	mensagem = "S"

else:
	mensagem = "N"
print(nota+nota/100*10)


-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:47:34) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)")

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
	
print(nota+nota/100*10)


-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:47:42) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)")

if(nota>=5):
	mensagem = "S"
else:
	mensagem = "N"
	
print(nota+nota/100*10)


-- EXECUTION TIME:
0.170827
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.840000000000001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:53:18) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)")

if(bonificacao == "S"):
	total = nota + nota/100*10
else:
	total = nota
print()


-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:53:24) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)")

if(bonificacao == "S"):
	total = nota + nota/100*10
else:
	total = nota
print()


-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:53:39) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)")

if(bonificacao == "S"):
	total = nota + nota/100*10
else:
	total = nota
print(total)


-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:53:58) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)")

if(bonificacao == "S"):
	total = nota + nota/100*10
else:
	total = nota
print(total)


-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:54:05) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)")

if(bonificacao == "S"):
	total = nota + nota/100*10
else:
	total = nota
print(total)


-- EXECUTION TIME:
0.182139
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:54:42) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)")

if(bonificacao == "S"):
	total = nota + nota/100*10
else:
	total = nota
print(total)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:57:12) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)")

if(bonificacao.upper() == "S"):
	total = nota + nota/100*10
else:
	total = nota
print(total)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:57:30) 
-- CODE:
nota = float(input("Qual sua nota?"))
bonificacao = input("Vai receber bonificacao? (S/N)")

if(bonificacao.upper() == "S"):
	total = nota + nota/100*10
else:
	total = nota
print(total)
-- EXECUTION TIME:
0.148308
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
